# vkPlay

./: .gitignore  CMakeLists.txt  proj.cmd
cmake/: shared.cmake
include/: vkPlay.h  vkPlaylib.h  vkTF.h  vkTFInterface.h  vkTFlib.h
include/base/: CMakeLists.txt  VulkanUIOverlay.h  vkPlaylib.cpp  vkPlaylib.h  vkTFInterface.cpp  vkTFInterface.h  vulkanexamplebase.cpp  vulkanexamplebase.h
lib/: vkTFlib.cpp
lib/x64/: shaderc_shared.lib
src/: vkPlay.cpp  vkTF.cpp
test/: CMakeLists.txt  common.cmake
test/misc/: CMakeLists.txt  vkSecondExample.cpp  vkSimpleExample.cpp
test/texture/: texture.cpp
